--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //Okhttp
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.1'
+
     // Paging
     implementation "androidx.paging:paging-runtime:2.1.0"
 
